--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "bugs": {
     "url": "https://github.com/electron-react-boilerplate/electron-react-boilerplate/issues"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/electron-react-boilerplate/electron-react-boilerplate.git"
@@ -109,6 +110,8 @@
     }
   },
   "dependencies": {
+    "antd": "^5.1.4",
+    "axios": "^1.2.2",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
