--- a/app/.godot/editor/script_editor_cache.cfg
+++ b/app/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 528,
-"scroll_position": 520.0,
-"selection": false,
+"row": 106,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 24,
+"selection_from_line": 106,
+"selection_to_column": 32,
+"selection_to_line": 106,
 "syntax_highlighter": "GDScript"
 }
 
@@ -45,10 +49,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 9,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 24,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
