--- a/app/.godot/editor/script_editor_cache.cfg
+++ b/app/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 106,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 24,
-"selection_from_line": 106,
-"selection_to_column": 32,
-"selection_to_line": 106,
+"row": 110,
+"scroll_position": 63.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -53,7 +49,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 24,
-"scroll_position": 0.0,
+"scroll_position": 22.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
