Text completion attempt

--- a/app/.godot/editor/editor_layout.cfg
+++ b/app/.godot/editor/editor_layout.cfg
@@ -21,14 +21,14 @@ open_scenes=["res://Main.tscn", "res://components/CharacterButton.tscn"]
 [ScriptEditor]
 
 open_scripts=["res://components/CharacterButton.gd", "res://Main.gd", "res://NavContainer.gd", "res://NinePatchRectPanel.gd"]
-open_help=[]
+open_help=["String"]
 script_split_offset=70
 list_split_offset=0
 
 [editor_log]
 
-log_filter_0=false
-log_filter_2=false
+log_filter_0=true
+log_filter_2=true
 log_filter_1=false
 log_filter_3=false
 log_filter_4=false
