--- a/app/.godot/editor/editor_layout.cfg
+++ b/app/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ open_scenes=["res://Main.tscn", "res://components/CharacterButton.tscn"]
 [ScriptEditor]
 
 open_scripts=["res://components/CharacterButton.gd", "res://Main.gd", "res://NavContainer.gd", "res://NinePatchRectPanel.gd"]
-open_help=["String"]
+open_help=["Array", "String"]
 script_split_offset=70
 list_split_offset=0
 
