--- a/app/.godot/editor/script_editor_cache.cfg
+++ b/app/.godot/editor/script_editor_cache.cfg
@@ -2,12 +2,12 @@
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 34,
+"breakpoints": PackedInt32Array(458),
+"column": 3,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 17,
-"row": 376,
-"scroll_position": 368.0,
+"h_scroll_position": 0,
+"row": 458,
+"scroll_position": 447.75,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 22,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 136,
-"row": 24,
-"scroll_position": 24.0,
+"h_scroll_position": 54,
+"row": 16,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
