Major change for yaw angle detection

--- a/app/.godot/editor/editor_layout.cfg
+++ b/app/.godot/editor/editor_layout.cfg
@@ -7,7 +7,7 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=304
 dock_hsplit_3=-394
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -16,13 +16,13 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Main.tscn", "res://components/CharacterButton.tscn"]
+open_scenes=["res://components/CharacterButton.tscn", "res://Main.tscn"]
 
 [ScriptEditor]
 
 open_scripts=["res://components/CharacterButton.gd", "res://Main.gd", "res://NavContainer.gd", "res://NinePatchRectPanel.gd"]
-open_help=["Array", "Object", "PacketPeer", "String", "WebSocketPeer"]
-script_split_offset=70
+open_help=["Array", "Input", "Object", "PacketPeer", "Quaternion", "String", "Vector3", "WebSocketPeer"]
+script_split_offset=187
 list_split_offset=0
 
 [editor_log]
