--- a/app/.godot/editor/script_editor_cache.cfg
+++ b/app/.godot/editor/script_editor_cache.cfg
@@ -2,12 +2,12 @@
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(458),
-"column": 3,
-"folded_lines": Array[int]([]),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": Array[int]([102, 123, 175, 196, 199, 211, 228, 237]),
 "h_scroll_position": 0,
-"row": 458,
-"scroll_position": 447.75,
+"row": 191,
+"scroll_position": 155.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,7 +49,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 54,
 "row": 16,
-"scroll_position": 0.0,
+"scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
