--- a/app/.godot/editor/script_editor_cache.cfg
+++ b/app/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
-"folded_lines": Array[int]([102, 123, 175, 196, 199, 211, 228, 237]),
+"column": 22,
+"folded_lines": Array[int]([97, 118, 194, 197, 209]),
 "h_scroll_position": 0,
-"row": 191,
-"scroll_position": 155.0,
+"row": 103,
+"scroll_position": 93.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,11 +45,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 54,
+"h_scroll_position": 0,
 "row": 16,
-"scroll_position": 16.0,
-"selection": false,
+"scroll_position": 4.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 16,
+"selection_to_column": 21,
+"selection_to_line": 17,
 "syntax_highlighter": "GDScript"
 }
