UI improvements and nav controls.

--- a/app/.godot/editor/editor_layout.cfg
+++ b/app/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ open_scenes=["res://components/CharacterButton.tscn", "res://Main.tscn"]
 [ScriptEditor]
 
 open_scripts=["res://components/CharacterButton.gd", "res://Main.gd", "res://NavContainer.gd", "res://NinePatchRectPanel.gd"]
-open_help=["Array", "Input", "Object", "PacketPeer", "Quaternion", "String", "Vector3", "WebSocketPeer"]
+open_help=["Array", "Input", "Object", "PackedStringArray", "PacketPeer", "Quaternion", "String", "Vector3", "WebSocketPeer"]
 script_split_offset=187
 list_split_offset=0
 
