Mental command sensitivity feature

--- a/app/.godot/editor/script_editor_cache.cfg
+++ b/app/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 123,
-"folded_lines": Array[int]([102, 123, 205, 208, 220]),
-"h_scroll_position": 1206,
-"row": 336,
-"scroll_position": 280.0,
+"column": 43,
+"folded_lines": Array[int]([122, 204, 207, 219]),
+"h_scroll_position": 0,
+"row": 439,
+"scroll_position": 383.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
