--- a/app/.godot/editor/project_metadata.cfg
+++ b/app/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="D:/Apps/Godot/Godot_v4.0.1-stable_win64.exe"
+executable_path="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/godot.windows.opt.tools.64.exe"
 use_advanced_connections=false
 
 [debug_options]
