--- a/app/.godot/editor/script_editor_cache.cfg
+++ b/app/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 43,
+"column": 26,
 "folded_lines": Array[int]([122, 204, 207, 219]),
 "h_scroll_position": 0,
-"row": 439,
-"scroll_position": 383.0,
+"row": 615,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,15 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 20,
 "scroll_position": 16.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 16,
-"selection_to_column": 21,
-"selection_to_line": 17,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
