--- a/app/.godot/editor/script_editor_cache.cfg
+++ b/app/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
-"folded_lines": Array[int]([122, 204, 207, 219]),
+"column": 15,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 615,
-"scroll_position": 0.0,
+"row": 191,
+"scroll_position": 182.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
