--- a/app/.godot/editor/script_editor_cache.cfg
+++ b/app/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 191,
-"scroll_position": 182.0,
-"selection": false,
+"row": 471,
+"scroll_position": 463.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 471,
+"selection_to_column": 23,
+"selection_to_line": 474,
 "syntax_highlighter": "GDScript"
 }
 
