--- a/app/.godot/editor/script_editor_cache.cfg
+++ b/app/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 471,
-"scroll_position": 463.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 471,
-"selection_to_column": 23,
-"selection_to_line": 474,
+"row": 348,
+"scroll_position": 332.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
